fix discard pile on mobile

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -505,7 +505,8 @@ body {
     right: 1rem;
     padding: 0;
 
-    ul {
+    ul,
+    i {
       display: none;
     }
   }
